@@ -29,6 +29,8 @@ Fixes:
    not just %q-registers. Reported by Wiggles. [MG]
  * The mud_url code didn't always work correctly in Firefox because http
    headers weren't sent. [MG]
+ * %0 and %1 arguments weren't properly passed through verb attributes
+   after a change in p8. Reported by Padraic. [MG]
 
 Version 1.8.4 patchlevel 8                                 Nov 11, 2011
 
